--- a/canvas/index.html
+++ b/canvas/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1 style="color:blue">lch&#122;h&#51;473's Canvas Animation</h1><br>
+	<h1 style="color:#00f">lch&#122;h&#51;473's Canvas Animation</h1><br>
 	<div class="index">
 		<a href="./ball">小球碰撞</a><br>
 		<a href="./pigrous" class="disabled">Pigrous</a><br>
