--- a/emote_scraper/index.html
+++ b/emote_scraper/index.html
@@ -37,13 +37,13 @@
 			<div>
 				筛选：
 				<input type="radio" name="filter" id="added">
-				<label for="added" style="color:green">新增</label>
+				<label for="added" style="color:#080">新增</label>
 				<input type="radio" name="filter" id="removed">
-				<label for="removed" style="color:red">移除</label>
+				<label for="removed" style="color:#f00">移除</label>
 				<input type="radio" name="filter" id="changed">
-				<label for="changed" style="color:orange">更改</label>
+				<label for="changed" style="color:#fa0">更改</label>
 				<input type="radio" name="filter" id="all">
-				<label for="all" style="color:blue">全部</label>
+				<label for="all" style="color:#00f">全部</label>
 			</div>
 			<div>
 				<span id="static">
@@ -64,7 +64,7 @@
 			<button type="button" onclick="saveHistory()">保存记录</button>
 		</div>
 	</div>
-	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="/script.js"></script>
 </body>
