--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1 style="color:blue">Welcome to lch&#122;h&#51;473's site!</h1><br>
+	<h1 style="color:#00f">Welcome to lch&#122;h&#51;473's site!</h1><br>
 	<div class="index">
 		<a href="./ascii_player">视频转字符画</a><br>
 		<a href="./av2bv">av号与bv号转换器</a><br>
