--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -16,7 +16,7 @@
 			<label for="openfile">上传文件</label>
 			<input type="button" value="重置" onclick="location.reload()">
 		</p>
-		<textarea id="result" rows="30" cols="40" placeholder="最终输出将在这里。" style="border: 1px solid gray" readonly></textarea>
+		<textarea id="result" rows="30" cols="40" placeholder="最终输出将在这里。" style="border: 1px solid #888" readonly></textarea>
 		<p>最小音符:
 			<select id="limnotes">
 				<option value="256">H</option>
@@ -37,7 +37,7 @@
 		<p>结果：</p>
 		<p id="output"></p>
 	</div>
-	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="/script.js"></script>
 </body>
