--- a/ascii_player/index.html
+++ b/ascii_player/index.html
@@ -57,7 +57,7 @@
 			<div id="stage"></div>
 		</div>
 	</div>
-	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="/script.js"></script>
 </body>
