--- a/av2bv/index.html
+++ b/av2bv/index.html
@@ -32,13 +32,13 @@
 			max-height: 16.8em;
 			text-align: start;
 			font: 13.33px monospace;
-			background-color: white;
+			background-color: #fff;
 			resize: none;
 			white-space: pre-wrap;
 			overflow: auto;
 			overflow-wrap: break-word;
 			padding: 0.2em;
-			border: 1px solid gray;
+			border: 1px solid #888;
 			border-radius: 2px;
 		}
 
@@ -99,7 +99,7 @@
 			</div>
 		</div>
 	</div>
-	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="/script.js"></script>
 </body>
