--- a/guess_number/index.html
+++ b/guess_number/index.html
@@ -28,7 +28,7 @@
 			<span id="result"></span>
 		</div><br><br>
 	</div>
-	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="/script.js"></script>
 </body>
