--- a/midi2json_v3/index.html
+++ b/midi2json_v3/index.html
@@ -55,7 +55,7 @@
 			<strong id="output"></strong>
 		</p>
 	</div>
-	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="/script.js"></script>
 </body>
