--- a/roco_combat/index.html
+++ b/roco_combat/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/style.css">
 	<style>
 		#stage {
-			background-color: white;
+			background-color: #fff;
 			width: 96vw;
 			max-width: 960px;
 			height: 56vw;
@@ -23,7 +23,7 @@
 		<embed id="stage" src="./combat.swf"></embed>
 		<div><strong id="flashInfo"></strong></div>
 	</div>
-	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="/script.js"></script>
 </body>
