--- a/canvas/index.html
+++ b/canvas/index.html
@@ -12,7 +12,8 @@
 	<div class="index">
 		<a href="./ball">小球碰撞</a><br>
 		<a href="./pigrous" class="disabled">Pigrous</a><br>
-		<a href="./pt2">钢琴块2</a>
+		<a href="./pt2">钢琴块2</a><br>
+		<a href="./mandelbrot">曼德博集合</a>
 	</div>
 </body>
 
