--- a/canvas/index.html
+++ b/canvas/index.html
@@ -13,7 +13,7 @@
 		<a href="./ball">小球碰撞</a><br>
 		<a href="./pigrous" class="disabled">Pigrous</a><br>
 		<a href="./pt2">钢琴块2</a><br>
-		<a href="./mandelbrot">曼德博集合</a>
+		<a href="./mandelbrot">Mandelbrot Set</a>
 	</div>
 </body>
 
