--- a/canvas/mandelbrot/index.html
+++ b/canvas/mandelbrot/index.html
@@ -74,6 +74,10 @@
 					</select>
 				</td>
 			</tr>
+			<tr>
+				<td class="item-left">下载图片</td>
+				<td class="item-right"><button id="download">点击下载</button></td>
+			</tr>
 		</table>
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
