--- a/canvas/pt2/index.html
+++ b/canvas/pt2/index.html
@@ -31,6 +31,16 @@
 					<td class="item-left"><a>默认BPM：</a></td>
 					<td class="item-right"><input type="text" id="cfg-bpm"></td>
 				</tr>
+				<tr>
+					<td class="item-left"><a>选择音色：</a></td>
+					<td class="item-right"><select id="cfg-soundfont">
+							<option value="app">官方APP</option>
+							<!--<option>QQ小程序</option>-->
+							<option value="8rock11e" selected>8rock11e</option>
+							<option value="umod">UMod 1.8</option>
+							<!--<option>自定义...</option>-->
+						</select></td>
+				</tr>
 			</table>
 			<hr>
 		</div>
