--- a/guess_number_v2/index.html
+++ b/guess_number_v2/index.html
@@ -45,7 +45,7 @@
 		<h1 class="title"></h1>
 		<p class="info"></p>
 		<p class="profile">
-			玩家和AI轮流猜数字，若玩家先猜中数字则获胜，并获得相应积分。
+			玩家和AI轮流猜数字，若玩家先猜中数字则获胜，并获得一定积分。
 		</p>
 		<div>当前积分：<span id="score"></span>
 		</div><br>
