--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<a href="./canvas">canvas动画</a><br>
 		<a href="./emote_scraper">b站表情图获取工具</a><br>
 		<a href="./guess_number">猜数字</a><br>
+		<a href="./guess_number_v2">猜数字v2</a><br>
 		<a href="./json_maker">JSON制作器</a><br>
 		<a href="./midi2json_v3">MIDI转JSON</a><br>
 		<!--<a href="./monika">Just Monika</a><br>-->
