--- a/csv/index.html
+++ b/csv/index.html
@@ -65,17 +65,17 @@
 		<h1 class="title"></h1>
 		<p class="info"></p>
 		<p class="profile">
-			在上框输入或粘贴一段包含AV号或BV号的文本，转换结果将在下框显示。<br>
-			点击彩色字可以跳转，点击“复制”按钮将转换结果复制到剪贴板。
+			<!--在上框输入或粘贴一段包含AV号或BV号的文本，转换结果将在下框显示。<br>
+			点击彩色字可以跳转，点击“复制”按钮将转换结果复制到剪贴板。-->
 		</p>
 		<div class="textbox">
 			<div class="inner">
 				<div>输入：</div>
 				<div>
-					<input type="checkbox" id="av2bv" onchange="convert()" checked>
+					<!--<input type="checkbox" id="av2bv" onchange="convert()" checked>
 					<label for="av2bv">av转bv</label>
 					<input type="checkbox" id="bv2av" onchange="convert()" checked>
-					<label for="bv2av">bv转av</label>
+					<label for="bv2av">bv转av</label>-->
 				</div>
 			</div>
 		</div>
@@ -95,7 +95,7 @@
 				<div>结果：<strong id="result"></strong></div>
 			</div><br>
 			<div class="inner">
-				<div>不知道什么是bv号？<a href="https://www.bilibili.com/read/cv5167957">点此了解</a></div>
+				<!--<div>不知道什么是bv号？<a href="https://www.bilibili.com/read/cv5167957">点此了解</a></div>-->
 			</div>
 		</div>
 	</div>
