--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>lch&#122;h&#51;473's Homepage</title>
 	<link rel="stylesheet" href="/style.css">
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?a2847526e110755a92e0ed1c8e948a32";
+			var s = document.getElementsByTagName("script")[0];
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 </head>
 
 <body>
@@ -13,7 +22,7 @@
 		<a href="./ascii_player">视频转字符画</a><br>
 		<a href="./av2bv">av号与bv号转换器</a><br>
 		<a href="./canvas">canvas动画</a><br>
-		<a href="./emote_scraper">b站表情图获取工具</a><br>
+		<!--<a href="./emote_scraper">b站表情图获取工具</a><br>-->
 		<a href="./guess_number">猜数字</a><br>
 		<a href="./guess_number_v2">猜数字v2</a><br>
 		<a href="./json_maker">JSON制作器</a><br>
