--- a/roco_combat/index.html
+++ b/roco_combat/index.html
@@ -14,6 +14,15 @@
 			max-height: 560px;
 		}
 	</style>
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?a2847526e110755a92e0ed1c8e948a32";
+			var s = document.getElementsByTagName("script")[0];
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
 </head>
 
 <body>
@@ -25,7 +34,7 @@
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="/script.js"></script>
+	<script src="/lib/main.js"></script>
 </body>
 
 </html>
