--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>Error 404</title>
 	<link rel="stylesheet" href="/style.css">
+	<script src="/lib/stat.js"></script>
 </head>
 
 <body>
