--- a/canvas/index.html
+++ b/canvas/index.html
@@ -5,15 +5,7 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>lch&#122;h&#51;473's Canvas Animation</title>
 	<link rel="stylesheet" href="/style.css">
-	<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?a2847526e110755a92e0ed1c8e948a32";
-			var s = document.getElementsByTagName("script")[0];
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
+	<script src="/lib/stat.js"></script>
 </head>
 
 <body>
