--- a/json2midi/index.html
+++ b/json2midi/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
+	<script src="/lib/stat.js"></script>
 	<style>
 		.textbox {
 			width: 80vw;
@@ -14,15 +15,6 @@
 			resize: none;
 		}
 	</style>
-	<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?a2847526e110755a92e0ed1c8e948a32";
-			var s = document.getElementsByTagName("script")[0];
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
 </head>
 
 <body>
