--- a/timer/index.html
+++ b/timer/index.html
@@ -6,6 +6,7 @@
 	<base target="_blank">
 	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
+	<script src="/lib/stat.js"></script>
 	<style>
 		table {
 			border-collapse: collapse;
@@ -30,15 +31,6 @@
 			text-align: center;
 		}
 	</style>
-	<script>
-		var _hmt = _hmt || [];
-		(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?a2847526e110755a92e0ed1c8e948a32";
-			var s = document.getElementsByTagName("script")[0];
-			s.parentNode.insertBefore(hm, s);
-		})();
-	</script>
 </head>
 
 <body>
