--- a/ascii_player/index.html
+++ b/ascii_player/index.html
@@ -6,7 +6,8 @@
 	<base target="_blank">
 	<title>(っ °Д °;)っ</title>
 	<link rel="stylesheet" href="/style.css">
-	<script src="/lib/stat.js"></script>
+	<script async src="/lib/stat.js"></script>
+	<script defer src="/lib/main.js"></script>
 	<style>
 		html,
 		body {
@@ -60,7 +61,6 @@
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="/lib/main.js"></script>
 </body>
 
 </html>
