--- a/roco_combat/index.html
+++ b/roco_combat/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>(っ °Д °;)っ</title>
 	<link rel="stylesheet" href="/style.css">
-	<script src="/lib/stat.js"></script>
+	<script async src="/lib/stat.js"></script>
+	<script defer src="/lib/main.js"></script>
 	<style>
 		#stage {
 			background-color: #fff;
@@ -26,7 +27,6 @@
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="/lib/main.js"></script>
 </body>
 
 </html>
