--- a/canvas/pt2/index.html
+++ b/canvas/pt2/index.html
@@ -6,7 +6,8 @@
 	<title>(っ °Д °;)っ</title>
 	<link rel="stylesheet" href="/style.css">
 	<link rel="stylesheet" href="style.css">
-	<script src="/lib/stat.js"></script>
+	<script async src="/lib/stat.js"></script>
+	<script defer src="/lib/main.js"></script>
 </head>
 
 <body>
@@ -56,7 +57,6 @@
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="/lib/main.js"></script>
 </body>
 
 </html>
