--- a/csv/index.html
+++ b/csv/index.html
@@ -6,7 +6,8 @@
 	<base target="_blank">
 	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
-	<script src="/lib/stat.js"></script>
+	<script async src="/lib/stat.js"></script>
+	<script defer src="/lib/main.js"></script>
 	<style>
 		.textbox {
 			margin: auto;
@@ -102,7 +103,6 @@
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="/lib/main.js"></script>
 </body>
 
 </html>
