--- a/ddz/index.html
+++ b/ddz/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
-	<script src="/lib/stat.js"></script>
+	<script async src="/lib/stat.js"></script>
+	<script defer src="/lib/main.js"></script>
 </head>
 
 <body>
@@ -22,7 +23,6 @@
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="/lib/main.js"></script>
 </body>
 
 </html>
