--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>lch&#122;h&#51;473's Homepage</title>
 	<link rel="stylesheet" href="/style.css">
-	<script src="/lib/stat.js"></script>
+	<script async src="/lib/stat.js"></script>
 </head>
 
 <body>
