--- a/ddz/index.html
+++ b/ddz/index.html
@@ -15,7 +15,7 @@
 		<p class="info"></p>
 		<div>随机发牌：
 			<input id="ok" type="button" onclick="guess()" value="重置">
-			<input type="button" value="发牌" onclick="location.reload()">
+			<input type="button" value="发牌" onclick="location.reload(true)">
 		</div><br>
 		<div>结果：
 			<span id="result"></span>
