--- a/emote_scraper/index.html
+++ b/emote_scraper/index.html
@@ -24,7 +24,7 @@
 		<div style="display:flex;justify-content:center">
 			<textarea class="input" id="input" style="resize: none" cols="30" rows="1" placeholder="这是文本框。"></textarea>
 			<button type="button" id="analyse">解析</button>
-			<button type="button" onclick="location.reload()">重置</button>
+			<button type="button" onclick="location.reload(true)">重置</button>
 		</div>
 		<p><strong id="output"></strong></p>
 		<div id="control" class="hide">
