--- a/ascii_player/index.html
+++ b/ascii_player/index.html
@@ -42,7 +42,7 @@
 			<input id="upload" type="file" accept="video/*">
 			<label id="control" for="upload">选择视频</label>
 			<input type="text" style="width:0;flex-grow:1;flex-shrink:1;pointer-events:none" id="filename">
-			<input type="button" value="重置" onclick="location.reload()">
+			<input type="button" value="重置" onclick="location.reload(true)">
 		</div>
 		<p>视频信息：<strong id="info" class="accept"></strong><strong id="fps" class="accept"></strong></p>
 		<div id="hide" class="hide">
