--- a/guess_number/index.html
+++ b/guess_number/index.html
@@ -24,7 +24,7 @@
 		<div>输入要猜的数字：
 			<input id="num" type="number" name="text">
 			<input id="ok" type="button" onclick="guess()" value="确定">
-			<input type="button" value="重置" onclick="location.reload()">
+			<input type="button" value="重置" onclick="location.reload(true)">
 		</div><br>
 		<div>结果：
 			<span id="result"></span>
