--- a/guess_number_v2/index.html
+++ b/guess_number_v2/index.html
@@ -55,7 +55,7 @@
 		<div id="input" class="textbox">
 			<input id="number" class="input" placeholder="输入要猜的数字" oninput="analyse(this.value)">
 			<input id="ok" class="disabled" type="button" onclick="guess()" value="确定">
-			<input type="button" value="重置" onclick="location.reload()">
+			<input type="button" value="重置" onclick="location.reload(true)">
 		</div>
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
