--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -16,7 +16,7 @@
 		<p>
 			<input type="file" accept="audio/midi" id="openfile">
 			<label for="openfile">上传文件</label>
-			<input type="button" value="重置" onclick="location.reload()">
+			<input type="button" value="重置" onclick="location.reload(true)">
 		</p>
 		<textarea id="result" rows="30" cols="40" placeholder="最终输出将在这里。" style="border: 1px solid #888" readonly></textarea>
 		<p>最小音符:
