--- a/midi2json_v3/index.html
+++ b/midi2json_v3/index.html
@@ -33,7 +33,7 @@
 			<input type="file" accept="audio/midi" id="upload">
 			<label for="upload">选择midi</label>
 			<input type="text" style="width:0;flex-grow:1;flex-shrink:1;pointer-events:none" id="filename">
-			<input type="button" value="重置" onclick="location.reload()">
+			<input type="button" value="重置" onclick="location.reload(true)">
 		</div><br>
 		<textarea id="result" class="textbox" placeholder="最终输出将在这里。" readonly></textarea>
 		<p style="line-height:2">
