--- a/emote_scraper/index.html
+++ b/emote_scraper/index.html
@@ -7,10 +7,10 @@
 	<meta name="referrer" content="no-referrer">
 	<base target="_blank">
 	<title>(っ °Д °;)っ</title>
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="/utils/style.css">
 	<link rel="stylesheet" href="./style.css">
-	<script async src="/lib/stat.js"></script>
-	<script defer src="/lib/main.js"></script>
+	<script async src="/utils/stat.js"></script>
+	<script defer src="/utils/main.js"></script>
 </head>
 
 <body>
