--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>Error 404</title>
-	<link rel="stylesheet" href="/style.css">
-	<script async src="/lib/stat.js"></script>
+	<link rel="stylesheet" href="/utils/style.css">
+	<script async src="/utils/stat.js"></script>
 </head>
 
 <body>
