--- a/ascii_player/index.html
+++ b/ascii_player/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<base target="_blank">
 	<title>(っ °Д °;)っ</title>
-	<link rel="stylesheet" href="/style.css">
-	<script async src="/lib/stat.js"></script>
-	<script defer src="/lib/main.js"></script>
+	<link rel="stylesheet" href="/utils/style.css">
+	<script async src="/utils/stat.js"></script>
+	<script defer src="/utils/main.js"></script>
 	<style>
 		html,
 		body {
