--- a/canvas/pt2/index.html
+++ b/canvas/pt2/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>(っ °Д °;)っ</title>
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="/utils/style.css">
 	<link rel="stylesheet" href="style.css">
-	<script async src="/lib/stat.js"></script>
-	<script defer src="/lib/main.js"></script>
+	<script async src="/utils/stat.js"></script>
+	<script defer src="/utils/main.js"></script>
 </head>
 
 <body>
