--- a/json2midi/index.html
+++ b/json2midi/index.html
@@ -3,10 +3,10 @@
 
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="/utils/style.css">
 	<title>(っ °Д °;)っ</title>
-	<script async src="/lib/stat.js"></script>
-	<script defer src="/lib/main.js"></script>
+	<script async src="/utils/stat.js"></script>
+	<script defer src="/utils/main.js"></script>
 	<style>
 		.textbox {
 			width: 80vw;
