--- a/roco_combat/index.html
+++ b/roco_combat/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>(っ °Д °;)っ</title>
-	<link rel="stylesheet" href="/style.css">
-	<script async src="/lib/stat.js"></script>
-	<script defer src="/lib/main.js"></script>
+	<link rel="stylesheet" href="/utils/style.css">
+	<script async src="/utils/stat.js"></script>
+	<script defer src="/utils/main.js"></script>
 	<style>
 		#stage {
 			background-color: #fff;
