--- a/av2bv/index.html
+++ b/av2bv/index.html
@@ -63,7 +63,7 @@
 </head>
 
 <body>
-	<div id="main" style="display:none">
+	<div class="main">
 		<h1 class="title"></h1>
 		<p class="info"></p>
 		<p class="profile">
@@ -97,7 +97,7 @@
 				<div>结果：<strong id="result"></strong></div>
 			</div><br>
 			<div class="inner">
-				<div>不知道什么是bv号？<a href="https://www.bilibili.com/read/cv5167957">点此了解</a></div>
+				<div>不知道什么是bv号？<a href="//www.bilibili.com/read/cv5167957">点此了解</a></div>
 			</div>
 		</div>
 	</div>
