--- a/canvas/ball/index.html
+++ b/canvas/ball/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-	<div id="main" style="display: none">
+	<div class="main">
 		<canvas id="stage"></canvas>
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
