--- a/canvas/pt2/index.html
+++ b/canvas/pt2/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<div id="main" style="display: none">
+	<div class="main">
 		<canvas id="stage"></canvas>
 		<div id="cover-loading">加载json...</div>
 		<div id="btn-config" class="btn hide">&#59796;</div>
