--- a/emote_scraper/index.html
+++ b/emote_scraper/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-	<div id="main" style="display: none">
+	<div class="main">
 		<h1 class="title"></h1>
 		<p class="info"></p>
 		<p class="profile">
-			点击<a id="website1" href="https://passport.bilibili.com/login">登录</a>，然后点击<a id="website2" href="https://api.bilibili.com/x/emote/setting/panel?business=reply">跳转</a>，将页面内全部内容复制粘贴至文本框，<br>
+			点击<a id="website1" href="//passport.bilibili.com/login">登录</a>，然后点击<a id="website2" href="//api.bilibili.com/x/emote/setting/panel?business=reply">跳转</a>，将页面内全部内容复制粘贴至文本框，<br>
 			最后点击“解析”按钮。留空以调用最近一次记录。
 		</p>
 		<div style="display:flex;justify-content:center">
