--- a/ascii_player/index.html
+++ b/ascii_player/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-	<div id="main" style="display:none">
+	<div class="main">
 		<h1 class="title"></h1>
 		<p class="info"></p>
 		<div class="upload">
