--- a/guess_number_v2/index.html
+++ b/guess_number_v2/index.html
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-	<div id="main" style="display: none">
+	<div class="main">
 		<h1 class="title"></h1>
 		<p class="info"></p>
 		<p class="profile">
