--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div id="main" style="display: none">
+	<div class="main">
 		<h1 class="title"></h1>
 		<p class="info"></p>
 		<p>
