--- a/ddz/index.html
+++ b/ddz/index.html
@@ -22,7 +22,7 @@
 		</div><br><br>
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
-	<script src="./script.js"></script>
+	<script src="./script.js?v1"></script>
 </body>
 
 </html>
