--- a/roco_combat/index.html
+++ b/roco_combat/index.html
@@ -26,7 +26,7 @@
 		<div><strong id="flashInfo"></strong></div>
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
-	<script src="./script.js"></script>
+	<script src="./script.js?v1"></script>
 </body>
 
 </html>
