--- a/timer/index.html
+++ b/timer/index.html
@@ -58,7 +58,7 @@
 		</table>
 	</div>
 	<noscript><strong style="color:#f00">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
-	<script src="./script.js"></script>
+	<script src="./script.js?v1"></script>
 </body>
 
 </html>
