--- a/canvas/pt2/index.html
+++ b/canvas/pt2/index.html
@@ -14,8 +14,8 @@
 	<div class="main">
 		<canvas id="stage"></canvas>
 		<div id="cover-loading">加载json...</div>
-		<div id="btn-config" class="btn hide">&#59796;</div>
-		<div id="btn-pause" class="btn hide">&#59926;</div>
+		<div id="btn-config" class="btn hide i-settings"></div>
+		<div id="btn-pause" class="btn hide i-pause"></div>
 		<div id="cover-dark" class="hide"></div>
 		<div id="view-config" class="hide">
 			<p class="config-title">设置</p>
