--- a/401.html
+++ b/401.html
@@ -3,15 +3,15 @@
 
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
-	<title>Error 404</title>
+	<title>Error 401</title>
 	<link rel="stylesheet" href="/utils/style.css">
 	<script async src="/utils/stat.js"></script>
 </head>
 
 <body>
-	<h1>404 Not Found</h1><br>
+	<h1>401 Unauthorized</h1><br>
 	<div class="index"><a href="/">返回主页</a></div><br>
-	<p>检查一下网址是否输入正确？</p><br>
+	<p>您无权查看此页（访问未授权或已过期）</p><br>
 </body>
 
 </html>
