--- a/canvas/index.html
+++ b/canvas/index.html
@@ -12,7 +12,7 @@
 	<h1 style="color:#00f">lch&#122;h&#51;473's Canvas Animation</h1><br>
 	<div class="index">
 		<a href="./ball">小球碰撞</a><br>
-		<a href="./phi">Phigros模拟器</a><br>
+		<a href="/sim-phi">Phigros模拟器</a><br>
 		<a href="./pt2">钢琴块2模拟器</a><br>
 		<a href="./mandelbrot">Mandelbrot Set</a>
 	</div>
